[tool.poetry]
name = "inlets"
version = "0.1.0"
description = ""
authors = ["James Hannah <jhannah@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
matplotlib = "^3.4.3"
pytest = "^6.2.5"
xarray = "^0.19.0"
netCDF4 = "^1.5.7"
jupyter = "^1.0.0"
ipykernel = "^6.4.1"
scipy = "^1.7.1"
Shapely = "^1.7.1"
PyGObject = "^3.42.0"
gsw = "^3.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
