[tool.poetry]
name = "inlets"
version = "0.1.0"
description = ""
authors = ["James Hannah <jhannah@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
matplotlib = "^3.4.3"
xarray = "^0.19.0"
netCDF4 = "^1.5.7"
scipy = "^1.7.1"
Shapely = "^1.7.1"
PyGObject = "^3.42.0"
cioos-data-transform = {path = "cioos-siooc_data_transform/cioos_data_transform", develop = true}

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pyflakes = "^2.4.0"
pytest = "^6.2.5"
jupyter = "^1.0.0"
ipykernel = "^6.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
