[tool.poetry]
name = "inlets"
version = "0.1.0"
description = ""
authors = ["James Hannah <jhannah@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.4.3"
xarray = "^0.19.0"
netCDF4 = "^1.5.7"
scipy = "^1.7.1"
Shapely = "^1.7.1"
gsw = ">=3.3.1"
ios-shell = "^1.0.0"
erddapy = "^1.2.1"
fsspec = "^2022.3.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pyflakes = "^2.4.0"
pytest = "^6.2.5"
jupyter = "^1.0.0"
ipykernel = "^6.4.2"
mypy = "^0.910"

[tool.poetry.scripts]
plot = "plot:main"

[tool.pyright]
exclude = ["data", ".git", "**/__pycache__"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
